--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Infrastructure
+name: Deploy via AWS CLI
 
 on:
   push:
@@ -6,27 +6,78 @@ on:
   workflow_dispatch:
 
 jobs:
-  terraform:
+  deploy-ec2:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./terraform
 
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-
-    - name: Configure AWS
+    - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
-    - name: Init & Apply
+    - name: Deploy Infrastructure
       run: |
-        terraform init
-        terraform apply -auto-approve
+        # 1. DEFINE VARIABLES
+        INSTANCE_NAME="K3s-ArgoCD-CLI"
+        AMI_ID="ami-0c7217cdde317cfec"  # Ubuntu 22.04 LTS (x86)
+        INSTANCE_TYPE="t3.small"        # The type we proved is allowed
+        KEY_NAME="k8s-lab-key"
+        SG_NAME="k8s-lab-sg-cli"
+
+        echo "--- Checking Security Group ---"
+        # Check if SG exists, if not create it
+        SG_ID=$(aws ec2 describe-security-groups --group-names $SG_NAME --query "SecurityGroups[0].GroupId" --output text 2>/dev/null || echo "None")
+        
+        if [ "$SG_ID" == "None" ]; then
+          echo "Creating Security Group..."
+          SG_ID=$(aws ec2 create-security-group --group-name $SG_NAME --description "K8s Lab SG" --query "GroupId" --output text)
+          # Add Rules (SSH, NodePort, API)
+          aws ec2 authorize-security-group-ingress --group-id $SG_ID --protocol tcp --port 22 --cidr 0.0.0.0/0
+          aws ec2 authorize-security-group-ingress --group-id $SG_ID --protocol tcp --port 30080 --cidr 0.0.0.0/0
+          aws ec2 authorize-security-group-ingress --group-id $SG_ID --protocol tcp --port 6443 --cidr 0.0.0.0/0
+          echo "Security Group Created: $SG_ID"
+        else
+          echo "Security Group found: $SG_ID"
+        fi
+
+        echo "--- Checking Instance ---"
+        # Check if a RUNNING instance with our specific tag already exists
+        INSTANCE_ID=$(aws ec2 describe-instances \
+          --filters "Name=tag:Name,Values=$INSTANCE_NAME" "Name=instance-state-name,Values=running" \
+          --query "Reservations[0].Instances[0].InstanceId" --output text)
+
+        if [ "$INSTANCE_ID" == "None" ]; then
+          echo "No running instance found. Launching new one..."
+          
+          # LAUNCH INSTANCE
+          INSTANCE_ID=$(aws ec2 run-instances \
+            --image-id $AMI_ID \
+            --count 1 \
+            --instance-type $INSTANCE_TYPE \
+            --key-name $KEY_NAME \
+            --security-group-ids $SG_ID \
+            --user-data file://scripts/user-data.sh \
+            --tag-specifications "ResourceType=instance,Tags=[{Key=Name,Value=$INSTANCE_NAME}]" \
+            --query "Instances[0].InstanceId" \
+            --output text)
+            
+          echo "Instance Launched: $INSTANCE_ID"
+          echo "Waiting for instance to be running..."
+          aws ec2 wait instance-running --instance-ids $INSTANCE_ID
+        else
+          echo "Instance already running: $INSTANCE_ID. Skipping creation."
+        fi
+
+        # GET PUBLIC IP
+        PUBLIC_IP=$(aws ec2 describe-instances --instance-ids $INSTANCE_ID --query "Reservations[0].Instances[0].PublicIpAddress" --output text)
+        
+        echo "------------------------------------------------"
+        echo "DEPLOYMENT COMPLETE"
+        echo "Instance IP: $PUBLIC_IP"
+        echo "ArgoCD URL: https://$PUBLIC_IP:30080"
+        echo "------------------------------------------------"
